= Changelog

== Version 1.0.1
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/40[#41]
|Enhancement
|Improve error message in case of wrong certificate passphrase.
|===

== Version 1.0.0
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/40[#40]
|Enhancement
|Base directory for certificate files.

Use the `--base-dir` parameter of the configuration tool or the `axway.config.certs.basedir` property of the plugin to specify the base directory for certificate files.

|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/39[#39]
|Enhancement
|Support for confidential properties.

For confidential properties the configuration tools supports to pass a secrets file.
It is a JSON file where the values of the properties are encrypted by a key.
|===

== Version 0.12.0
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/35[#35]
|Enhancement
| Support removal of certificates.

A new certificate type `empty` is introduced for the `update` object of the certificate configuration file.
It indicates that a certificate will be updated with an empty certificate and therefore will be removed.

[source,json]
----
{
  "certifictates": {
    "to-be-deleted": {
      "origin": {
        "info": {
          "not_after": "2020-08-23T20:24:00+02:00", 
          "subject": "CN=localhost, O=ACME Inc., C=EX"
        }
      },
      "update": {
        "type": "empty" <1>
      }
    }
}
----
<1> Type `empty` will remove the certificate.

|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/36[#36]
|Enhancement
|The default source for new environmentalized fields is `property`.

.Old default source
[source,json]
----
{
  "field#0": {
    "source": "value", <1>
    "type": "string",
    "used": true,