@@ -4,9 +4,15 @@
 [cols="1,2,<10a", options="header"]
 |===
 |ID|Type|Description
-|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/40[#41]
+|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/41[#41]
 |Enhancement
 |Improve error message in case of wrong certificate passphrase.
+
+|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/46[#46]
+|Bug
+|Base path for certificates is ignored by `apigw:deploy` goal (server or policy projects).
+
+If the `apigw:deploy` goal is executed for server or policy projects, the configuration of the base path for certificates is ignored.
 |===
 
 == Version 1.0.0
